# SECURITISATION-INTELLIGENCE-v1.0

./: .gitignore  LICENSE  README.md  assumptions_methodology.md  dashboard_specifications.md  dax_measure_dictionary.xlsx  dax_measure_library.dax.txt  ecl_crosscheck.xlsx  implementation_guide.md  index.html  matrisk_ai_v1_deck.pptx  pyproject.toml  star_schema.md  technical_report.md  waterfall_validation.xlsx
configs/: default.yaml
dashboard/: data_inline.js
data/processed/: dashboard_payload.json  stress_results.csv  tranche_allocation.csv  waterfall.csv
data/raw/: dim_geography.csv  dim_pool.csv  dim_scenario.csv  dim_servicer.csv  dim_tranche.csv  dim_vehicle.csv  fact_dpd_snapshot.csv  fact_loan.csv  fact_loss_monthly.csv  fact_vintage.csv
src/matrisk/: __init__.py  config.py  pipeline.py
src/matrisk/analytics/: __init__.py  credit.py  portfolio.py  stress.py  waterfall.py
src/matrisk/cli/: main.py
src/matrisk/data/: __init__.py  generate.py  loaders.py  schemas.py
src/matrisk/reporting/: __init__.py  dashboard.py
src/matrisk/serve/: __init__.py  app.py
tests/: conftest.py  test_cli.py  test_credit.py  test_generate.py  test_pipeline.py  test_portfolio.py  test_schemas.py  test_serve.py  test_stress.py  test_waterfall.py
